# rapidview

./: CMakeLists.txt  LICENSE  README.md  gander.pro  jsontab.cpp  jsontab.h  jsonview.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rapidview.pro  resource.qrc  resource.qrc.autosave  settings.cpp  tabs.h
settings/: settings.json
src/: jsontab.cpp  jsontab.h  jsonview.cpp  jsonview.h  main.cpp  mainwindow.cpp  mainwindow.h  opentabs.cpp  opentabs.h  settings.cpp  settings.h  tabs.cpp
src/ui/: mainwindow.ui
ui/: jsontab.ui  mainwindow.ui
